--- a/cluster-configs/deploy.yml
+++ b/cluster-configs/deploy.yml
@@ -18,7 +18,11 @@ spec:
       - name: caddy
         image: caddy:2
         imagePullPolicy: Always
-        command: ["caddy", "--conf", "/Caddyfile"]
+        args:
+          - caddy
+          - run
+          - --config
+          - /etc/caddy/Caddyfile
         ports:
         - containerPort: 80
           protocol: TCP
@@ -29,9 +33,9 @@ spec:
             memory: 128Mi
             cpu: 500m
         volumeMounts:
-        - mountPath: /Caddyfile
-          name: caddy-config
-          subPath: Caddyfile
+        - name: config 
+          mountPath: /etc/caddy
+          readOnly: true
       - name: php-fpm
         image: asktestacr.azurecr.io/php-fpm-8-kusala:0.1.0
         imagePullPolicy: Always
@@ -43,10 +47,6 @@ spec:
             memory: 128Mi
             cpu: 500m
       volumes:
-        - name: caddy-config
+        - name: config
           configMap:
             name: caddy-config
-            items:
-              - key: Caddyfile
-                path: Caddyfile
-                mode: 0644
